# hotspot

./: CLAUDE.md  CMakeLists.txt  Main.qml  hotspot.capnp  hotspotchat.cpp  hotspotchat.h  hproto.h  main.cpp
.github/workflows/: ci.yml
chat/: CMakeLists.txt  Main.qml  hotspotchat.cpp  hotspotchat.h  main.cpp
client/: CMakeLists.txt  Main.qml  hotspotchat.cpp
common/: CMakeLists.txt  hproto.h  hproto_types.h
hproto/: CMakeLists.txt  hbuffer.h  hlog.cpp  hlog.h  hproto.cpp  hproto.h  hproto_router.h  hproto_types.h  hudpchannel.cpp  hudpchannel.h
relay/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_hproto.cpp
tests/integration/: conftest.py  test_file_transfer.py  test_messaging.py  test_redirect.py
tests/unit/: CMakeLists.txt  test_hproto.cpp
